# for_DataBase_project

./: .flake8  README.md  pyproject.toml
src/: class_DBManager.py  data_to_db.py  file.html  get_data_API.py  main.py  refactor_API_data.py  wep_app_get_form.py
tests/: test_class_DBManager.py  test_data_to_db.py  test_get_data_API.py  test_refactor_API_data.py
